Cleanup cmake files - Add platform support - Add option to copy built files to win32 directory - Switch to freeglut (adds win64 support) - Fix a bug where cmake include paths weren't correctly setup in demo exes. - Add new win32 binaries built againt freeglut. - Add x64 support to timing.cpp

--- a/src/demos/CMakeLists.txt
+++ b/src/demos/CMakeLists.txt
@@ -1,12 +1,28 @@
 cmake_minimum_required (VERSION 2.8)
 
-find_package(OpenGL)
+find_package(OpenGL REQUIRED)
 
-find_library(GLUT glut
-    PATHS "${CMAKE_SOURCE_DIR}/lib" "${CMAKE_SOURCE_DIR}/lib/win32")
+if(MSVC)
+	find_package(GLUT QUIET)
+	if(NOT GLUT_FOUND)
+		set(GLUT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/contrib/freeglut/include")
+		if("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
+			set(GLUT_LIBRARIES "${CMAKE_SOURCE_DIR}/contrib/freeglut/lib/x64/freeglut.lib")
+			file(COPY "${CMAKE_SOURCE_DIR}/contrib/freeglut/bin/x64/freeglut.dll"
+		    	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+		else()
+			set(GLUT_LIBRARIES "${CMAKE_SOURCE_DIR}/contrib/freeglut/lib/freeglut.lib")
+			file(COPY "${CMAKE_SOURCE_DIR}/contrib/freeglut/bin/freeglut.dll"
+		    	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+		endif()
+	endif()
+else()
+	find_package(GLUT REQUIRED)
+endif()
 
-find_library(GLUT32 glut32
-    PATHS "${CMAKE_SOURCE_DIR}/lib" "${CMAKE_SOURCE_DIR}/lib/win32")
+if(WIN32)
+    set(PLATFORM_LIBRARIES winmm.lib)
+endif()
 
 file(GLOB COMMON_DEMO_HEADERS
 	${CMAKE_SOURCE_DIR}/src/demos/*.h
@@ -16,11 +32,12 @@ file(GLOB COMMON_DEMO_SOURCE
 	${CMAKE_SOURCE_DIR}/src/demos/*.cpp
 )
 
-set (COMMON_DEMO_INCLUDE "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/src/demos")
+set(COMMON_DEMO_INCLUDE "${GLUT_INCLUDE_DIR}" "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/src/demos")
+set(COMMON_DEMO_LIBS ${GLUT_glut_LIBRARY} ${OPENGL_LIBRARIES} ${PLATFORM_LIBRARIES})
 
-set(COMMON_DEMO_LIBS ${GLUT32} ${OPENGL_LIBRARIES} winmm.lib)
-
-set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
+if(MSVC)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
+endif()
 
 add_subdirectory(ballistic)
 add_subdirectory(bigballistic)
