--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-
-# Linux Object Files
-src/*.o
-lib/linux/*
-bin/linux/*
-
-
-# Prebuilt OSX Executables
-lib/osx64/*
-bin/osx64/*
-
-
-# Xcode Specific Files
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-*.xcworkspace
-!default.xcworkspace
-xcuserdata
-*.moved-aside
+build/
+CMakeUserPref.json
+.vs/
+.vscode/
