--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25.0)
 project(CyclonePhysics)
 
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CycloneTest)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CXX_STANDARD_REQUIRED ON)
 
@@ -20,4 +20,4 @@ find_package(catch2 REQUIRED)
 
 add_subdirectory(Lib)
 add_subdirectory(Test)
-# add_subdirectory(Demo)
+add_subdirectory(Demo)
