--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Common demo library
 add_subdirectory(Lib)
 
-# Ballistic demo
+# Demos
 add_subdirectory(Ballistic)
+add_subdirectory(BigBallistic)
