More demos and screenshots

--- a/Demos/CMakeLists.txt
+++ b/Demos/CMakeLists.txt
@@ -7,3 +7,6 @@ add_subdirectory(BigBallistic)
 add_subdirectory(Blob)
 add_subdirectory(Bridge)
 add_subdirectory(Explosion)
+add_subdirectory(Fireworks)
+add_subdirectory(FlightSim)
+add_subdirectory(Fracture)
