--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if (MSVC)
 endif()
 
 find_package(glm REQUIRED)
-find_package(freeglut REQUIRED)
+find_package(FreeGLUT REQUIRED)
 find_package(fmtlog REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(catch2 REQUIRED)
